# linear-regression

./: .gitmodules  CMakeLists.txt  example.c  linear_regression.c  linear_regression.h
.github/workflows/: cmake.yml
src/: CMakeLists.txt
test/: CMakeLists.txt  test_linear_regression.c
unity/: CMakeLists.txt
